--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit==1.40.1  # Use the latest available version from the error log
+streamlit==1.40.1
 ultralytics==8.2.27
+torch==2.2.0+cpu --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.17.0+cpu --index-url https://download.pytorch.org/whl/cpu
+opencv-python-headless==4.9.0.80
 numpy==1.26.4
 Pillow==10.3.0
 folium==0.15.1
@@ -8,7 +11,4 @@ shapely==2.0.3
 pandas==2.2.3
 geopy==2.5.0
 plotly==5.22.0
-opencv-python-headless==4.9.0.80
-torch==2.3.0+cpu
-torchvision==0.18.0+cpu
 requests==2.32.3
