--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.40.1
 ultralytics==8.2.27
-torch==2.2.0+cpu --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.17.0+cpu --index-url https://download.pytorch.org/whl/cpu
+torch==2.2.0 --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.17.0 --index-url https://download.pytorch.org/whl/cpu
 opencv-python-headless==4.9.0.80
 numpy==1.26.4
 Pillow==10.3.0
