--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-streamlit==1.40.1
-ultralytics==8.2.27
-torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
-torchvision==0.17.0 --extra-index-url https://download.pytorch.org/whl/cpu
-opencv-python-headless==4.9.0.80
-numpy==1.26.4
-Pillow==10.3.0
-folium==0.15.1
-streamlit-folium==0.13.0
-shapely==2.0.3
-pandas==2.2.3
-geopy==2.4.1
-plotly==5.22.0
-requests==2.32.3
+streamlit>=1.32.0
+requests>=2.31.0
+ultralytics>=8.0.0
+numpy>=1.26.0
+Pillow>=10.0.0
+geocoder>=1.38.1
+folium>=0.15.0
+streamlit-folium>=0.3.1
+shapely>=2.0.1
+pandas>=2.0.0
+geopy>=2.3.0
+plotly>=5.18.0
+python-dateutil>=2.8.2
