--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.32.0
 requests>=2.31.0
 ultralytics>=8.0.0
-numpy>=1.26.0
+numpy~=1.24.4 
 Pillow>=10.0.0
 geocoder>=1.38.1
 folium>=0.15.0
