--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,31 @@
-streamlit>=1.32.0
-requests>=2.31.0
-ultralytics>=8.0.0
-numpy~=1.24.4 
-Pillow>=10.0.0
-geocoder>=1.38.1
-folium>=0.15.0
-streamlit-folium>=0.3.1
-shapely>=2.0.1
-pandas>=2.0.0
-geopy>=2.3.0
-plotly>=5.18.0
-python-dateutil>=2.8.2
-opencv-python>=4.5.4.60
+# Updated requirements.txt with compatible versions
+streamlit==1.32.0
+ultralytics==8.2.0
+opencv-python-headless==4.9.0.80
+numpy==1.24.4  # Compatible with older environments
+pandas==1.5.3  # Downgraded for compatibility
+Pillow==10.2.0
+
+# Geospatial & Mapping
+geocoder==1.38.1
+folium==0.16.0
+streamlit-folium==0.17.0
+shapely==2.0.3
+geopy==2.4.1
+
+# Visualization
+plotly==5.19.0
+matplotlib==3.7.5  # Compatible version
+
+# Machine Learning
+torch==2.0.1  # More widely compatible
+torchvision==0.15.2
+
+# Utilities
+python-dateutil==2.8.2
+protobuf==3.20.3
+requests==2.31.0
+tqdm==4.66.2
+
+# Compatibility
+typing-extensions==4.10.0
