--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,31 @@
-# Updated requirements.txt with compatible versions
+# Core Requirements
 streamlit==1.32.0
 ultralytics==8.2.0
-opencv-python-headless==4.9.0.80
-numpy==1.24.4  # Compatible with older environments
-pandas==1.5.3  # Downgraded for compatibility
-Pillow==10.2.0
+opencv-python-headless==4.8.1.78
+numpy==1.24.4
+pandas==2.0.3
+Pillow==10.1.0
 
 # Geospatial & Mapping
 geocoder==1.38.1
-folium==0.16.0
-streamlit-folium==0.17.0
-shapely==2.0.3
-geopy==2.4.1
+folium==0.14.0
+streamlit-folium==0.15.1
+shapely==1.8.5.post1
+geopy==2.3.0
 
 # Visualization
-plotly==5.19.0
-matplotlib==3.7.5  # Compatible version
+plotly==5.18.0
+matplotlib==3.7.5
 
 # Machine Learning
-torch==2.0.1  # More widely compatible
+torch==2.0.1
 torchvision==0.15.2
 
 # Utilities
 python-dateutil==2.8.2
 protobuf==3.20.3
 requests==2.31.0
-tqdm==4.66.2
+tqdm==4.65.0
 
 # Compatibility
-typing-extensions==4.10.0
+typing-extensions==4.7.1
